[gd_scene load_steps=2 format=3 uid="uid://dsnm288k544ud"]

[ext_resource type="Script" path="res://Weapon.gd" id="1_sc1j8"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_sc1j8")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="BulletSpawnLocation" type="Marker2D" parent="."]

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
